--- a/index.html
+++ b/index.html
@@ -933,6 +933,7 @@
           <option value="AM Opacity 50%">AM Opacity 50%</option>
           <option value="AM Opacity 25%">AM Opacity 25%</option>
           <option value="AM Opacity 0%">AM Opacity 0%</option>
+          <option value="User Buttons">User Buttons</option>
           <option value="Directors Monitor 7 inch handheld">Directors Monitor 7 inch handheld</option>
           <option value="Directors Monitor 15-19 inch">Directors Monitor 15-19 inch</option>
           <option value="Combo Monitor 15-19 inch">Combo Monitor 15-19 inch</option>
