--- a/index.html
+++ b/index.html
@@ -872,6 +872,14 @@
           <option value="59.94">59.94</option>
           <option value="60">60</option>
         </select></label></div>
+      <div class="form-row"><label for="sensorMode">Sensor Mode:<select id="sensorMode" name="sensorMode">
+          <option value=""></option>
+          <option value="Open Gate">Open Gate</option>
+          <option value="16:9">16:9</option>
+          <option value="6:5">6:5</option>
+          <option value="4:3">4:3</option>
+          <option value="2:1">2:1</option>
+        </select></label></div>
       <div class="form-row"><label for="lenses">Lenses:<select id="lenses" name="lenses"></select></label></div>
       <div class="form-row"><label for="requiredScenarios">What required scenarios do we have for this shoot?
         <select id="requiredScenarios" name="requiredScenarios" multiple size="25">
