feat: add sensor mode to project form

--- a/index.html
+++ b/index.html
@@ -847,6 +847,7 @@
           <option value="12K">12K</option>
           <option value="16K">16K</option>
         </select></label></div>
+      <div class="form-row"><label for="sensorMode">Sensor Mode:<select id="sensorMode" name="sensorMode"></select></label></div>
       <div class="form-row"><label for="aspectRatio">Aspect Ratio:<select id="aspectRatio" name="aspectRatio">
           <option value=""></option>
           <option value="16:9">16:9</option>
