--- a/index.html
+++ b/index.html
@@ -1013,20 +1013,25 @@
           <option value="Rain Machine">Rain Machine</option>
           <option value="Slow Motion">Slow Motion</option>
           <option value="Viewfinder Extension">Viewfinder Extension</option>
+          <option value="Battery Belt">Battery Belt</option>
         </select>
         <div id="requiredScenariosSummary" class="scenario-summary" aria-live="polite"></div>
       </div>
       <div class="form-row">
-        <label for="rigging">How would you like to have your camera rigged?</label>
-        <select id="rigging" name="rigging" multiple size="15">
-          <option value="Shoulder rig">Shoulder rig</option>
+        <label for="cameraHandle">Camera Handle:</label>
+        <select id="cameraHandle" name="cameraHandle" multiple size="3">
+          <option value="Handle Extension">Handle Extension</option>
+          <option value="L-Handle">L-Handle</option>
           <option value="Hand Grips">Hand Grips</option>
-          <option value="Teradek and Battery belt">Teradek and Battery belt</option>
-          <option value="Top handle extension">Top handle extension</option>
-          <option value="Rear Handle">Rear Handle</option>
-          <option value="Clamp-On Mattebox">Clamp-On Mattebox</option>
-          <option value="Swingaway Mattebox">Swingaway Mattebox</option>
-          <option value="Rod based Mattebox">Rod based Mattebox</option>
+        </select>
+      </div>
+      <div class="form-row">
+        <label for="mattebox">Mattebox:</label>
+        <select id="mattebox" name="mattebox">
+          <option value="">-- Select --</option>
+          <option value="Rod based">Rod based</option>
+          <option value="Clamp On">Clamp On</option>
+          <option value="Swing Away">Swing Away</option>
         </select>
       </div>
       <h3 id="monitoringHeading">Monitoring</h3>
