feat: add user button multiselects

--- a/index.html
+++ b/index.html
@@ -1081,15 +1081,15 @@
       </div>
       <div class="form-row">
         <label for="monitorUserButtons">Onboard Monitor User Buttons:</label>
-        <input type="text" id="monitorUserButtons" name="monitorUserButtons" />
+        <select id="monitorUserButtons" name="monitorUserButtons" multiple size="5"></select>
       </div>
       <div class="form-row">
         <label for="cameraUserButtons">Camera User Buttons:</label>
-        <input type="text" id="cameraUserButtons" name="cameraUserButtons" />
+        <select id="cameraUserButtons" name="cameraUserButtons" multiple size="5"></select>
       </div>
       <div class="form-row">
         <label for="viewfinderUserButtons">Viewfinder User Buttons:</label>
-        <input type="text" id="viewfinderUserButtons" name="viewfinderUserButtons" />
+        <select id="viewfinderUserButtons" name="viewfinderUserButtons" multiple size="5"></select>
       </div>
       <div class="form-row hidden" id="tripodPreferencesRow">
         <strong>Tripod Preferences:</strong>
