Populate recording options from camera data

--- a/index.html
+++ b/index.html
@@ -912,25 +912,7 @@
       </div>
       <div class="form-row">
         <label for="recordingResolution">Recording Resolution:</label>
-        <select id="recordingResolution" name="recordingResolution">
-          <option value=""></option>
-          <option value="720p">720p</option>
-          <option value="1080p">1080p</option>
-          <option value="1440p">1440p</option>
-          <option value="2K">2K</option>
-          <option value="2.7K">2.7K</option>
-          <option value="3.2K UHD">3.2K UHD</option>
-          <option value="4K">4K</option>
-          <option value="4.5K">4.5K</option>
-          <option value="5K">5K</option>
-          <option value="5.7K">5.7K</option>
-          <option value="6K">6K</option>
-          <option value="7K">7K</option>
-          <option value="8K">8K</option>
-          <option value="9K">9K</option>
-          <option value="12K">12K</option>
-          <option value="16K">16K</option>
-        </select>
+        <select id="recordingResolution" name="recordingResolution"></select>
       </div>
       <div class="form-row">
         <label for="sensorMode">Sensor Mode:</label>
