--- a/index.html
+++ b/index.html
@@ -1012,7 +1012,6 @@
           <option value="Extreme heat">Extreme heat</option>
           <option value="Rain Machine">Rain Machine</option>
           <option value="Slow Motion">Slow Motion</option>
-          <option value="Viewfinder Extension">Viewfinder Extension</option>
           <option value="Battery Belt">Battery Belt</option>
         </select>
         <div id="requiredScenariosSummary" class="scenario-summary" aria-live="polite"></div>
@@ -1032,6 +1031,13 @@
           <option value="Rod based">Rod based</option>
           <option value="Clamp On">Clamp On</option>
           <option value="Swing Away">Swing Away</option>
+        </select>
+      </div>
+      <div class="form-row hidden" id="viewfinderExtensionRow">
+        <label for="viewfinderExtension">Viewfinder Extension:</label>
+        <select id="viewfinderExtension" name="viewfinderExtension">
+          <option value=""></option>
+          <option value="ARRI VEB-3 Viewfinder Extension Bracket">ARRI VEB-3 Viewfinder Extension Bracket</option>
         </select>
       </div>
       <h3 id="monitoringHeading">Monitoring</h3>
