feat: add viewfinder extension rigging selector

--- a/index.html
+++ b/index.html
@@ -994,7 +994,6 @@
           <option value="Extreme heat">Extreme heat</option>
           <option value="Rain Machine">Rain Machine</option>
           <option value="Slow Motion">Slow Motion</option>
-          <option value="Viewfinder Extension">Viewfinder Extension</option>
           <option value="Battery Belt">Battery Belt</option>
         </select>
         <div id="requiredScenariosSummary" class="scenario-summary" aria-live="polite"></div>
@@ -1005,6 +1004,16 @@
           <option value="Handle Extension">Handle Extension</option>
           <option value="L-Handle">L-Handle</option>
           <option value="Hand Grips">Hand Grips</option>
+        </select>
+      </div>
+      <div class="form-row hidden" id="viewfinderExtensionRow">
+        <label for="viewfinderExtension">Viewfinder Extension:</label>
+        <select id="viewfinderExtension" name="viewfinderExtension" multiple size="5">
+          <option value="ARRI VEB-3 Viewfinder Extension Bracket">ARRI VEB-3 Viewfinder Extension Bracket</option>
+          <option value="ARRI Viewfinder Bracket (FS7II/FX9)">ARRI Viewfinder Bracket (FS7II/FX9)</option>
+          <option value="ARRI Viewfinder Adapter VFA-3">ARRI Viewfinder Adapter VFA-3</option>
+          <option value="ARRI Viewfinder Adapter VFA-4">ARRI Viewfinder Adapter VFA-4</option>
+          <option value="ARRI Viewfinder Adapter VFA-2">ARRI Viewfinder Adapter VFA-2</option>
         </select>
       </div>
       <div class="form-row">
