Simplify viewfinder extension selection

--- a/index.html
+++ b/index.html
@@ -1009,12 +1009,9 @@
       </div>
       <div class="form-row hidden" id="viewfinderExtensionRow">
         <label for="viewfinderExtension">Viewfinder Extension:</label>
-        <select id="viewfinderExtension" name="viewfinderExtension" multiple size="5">
-          <option value="ARRI VEB-3 Viewfinder Extension Bracket">ARRI VEB-3 Viewfinder Extension Bracket</option>
-          <option value="ARRI Viewfinder Bracket (FS7II/FX9)">ARRI Viewfinder Bracket (FS7II/FX9)</option>
-          <option value="ARRI Viewfinder Adapter VFA-3">ARRI Viewfinder Adapter VFA-3</option>
-          <option value="ARRI Viewfinder Adapter VFA-4">ARRI Viewfinder Adapter VFA-4</option>
-          <option value="ARRI Viewfinder Adapter VFA-2">ARRI Viewfinder Adapter VFA-2</option>
+        <select id="viewfinderExtension" name="viewfinderExtension">
+          <option value="" selected>No</option>
+          <option value="ARRI VEB-3 Viewfinder Extension Bracket">Yes</option>
         </select>
       </div>
       <div class="form-row">
