Refine tripod preferences layout

--- a/index.html
+++ b/index.html
@@ -1111,35 +1111,43 @@
       </div>
 
       <h3 id="tripodPreferencesHeading" class="hidden">Tripod Preferences</h3>
-      <div class="form-row hidden" id="tripodPreferencesRow">
-        <label for="tripodHeadBrand">Head Brand:</label>
-        <select id="tripodHeadBrand" name="tripodHeadBrand">
-          <option value=""></option>
-          <option value="OConnor">O'Connor</option>
-          <option value="Sachtler">Sachtler</option>
-          <option value="other">other</option>
-        </select>
-        <label for="tripodBowl">Bowl type:</label>
-        <select id="tripodBowl" name="tripodBowl">
-          <option value=""></option>
-          <option value="75mm bowl">75mm bowl</option>
-          <option value="100mm bowl">100mm bowl</option>
-          <option value="150mm bowl">150mm bowl</option>
-          <option value="Mitchell Mount">Mitchell Mount</option>
-        </select>
-        <label for="tripodTypes">Tripod types:</label>
-        <select id="tripodTypes" name="tripodTypes" multiple size="4">
-          <option value="Standard Tripod">Standard Tripod</option>
-          <option value="Baby Tripod">Baby Tripod</option>
-          <option value="Frog Tripod">Frog Tripod</option>
-          <option value="Hi-Head">Hi-Head</option>
-        </select>
-        <label for="tripodSpreader">Spreader Preference:</label>
-        <select id="tripodSpreader" name="tripodSpreader">
-          <option value=""></option>
-          <option value="Mid-Level Spreader">Mid-Level Spreader</option>
-          <option value="Ground Spreader">Ground Spreader</option>
-        </select>
+      <div class="hidden" id="tripodPreferencesRow">
+        <div class="form-row">
+          <label for="tripodHeadBrand">Head Brand:</label>
+          <select id="tripodHeadBrand" name="tripodHeadBrand">
+            <option value=""></option>
+            <option value="OConnor">O'Connor</option>
+            <option value="Sachtler">Sachtler</option>
+            <option value="other">other</option>
+          </select>
+        </div>
+        <div class="form-row">
+          <label for="tripodBowl">Bowl type:</label>
+          <select id="tripodBowl" name="tripodBowl">
+            <option value=""></option>
+            <option value="75mm bowl">75mm bowl</option>
+            <option value="100mm bowl">100mm bowl</option>
+            <option value="150mm bowl">150mm bowl</option>
+            <option value="Mitchell Mount">Mitchell Mount</option>
+          </select>
+        </div>
+        <div class="form-row">
+          <label for="tripodTypes">Tripod types:</label>
+          <select id="tripodTypes" name="tripodTypes" multiple size="4">
+            <option value="Standard Tripod">Standard Tripod</option>
+            <option value="Baby Tripod">Baby Tripod</option>
+            <option value="Frog Tripod">Frog Tripod</option>
+            <option value="Hi-Head">Hi-Head</option>
+          </select>
+        </div>
+        <div class="form-row">
+          <label for="tripodSpreader">Spreader Preference:</label>
+          <select id="tripodSpreader" name="tripodSpreader">
+            <option value=""></option>
+            <option value="Mid-Level Spreader">Mid-Level Spreader</option>
+            <option value="Ground Spreader">Ground Spreader</option>
+          </select>
+        </div>
       </div>
       <menu>
         <button type="reset" id="projectCancel">Cancel</button>
