--- a/index.html
+++ b/index.html
@@ -1089,11 +1089,14 @@
       <div class="form-row">
         <label for="videoDistribution">Video distribution:</label>
         <select id="videoDistribution" name="videoDistribution" multiple size="10">
-          <option value="Directors Monitor handheld">Directors Monitor handheld</option>
-          <option value="Gaffers Monitor handheld">Gaffers Monitor handheld</option>
-          <option value="Directors Monitor 15-21 inch">Directors Monitor 15-21 inch</option>
-          <option value="Combo Monitor 15-21 inch">Combo Monitor 15-21 inch</option>
+          <option value="Directors Monitor 7&quot; handheld">Directors Monitor 7&quot; handheld</option>
+          <option value="Gaffers Monitor 7&quot; handheld">Gaffers Monitor 7&quot; handheld</option>
+          <option value="Directors Monitor 15-21&quot;">Directors Monitor 15-21&quot;</option>
+          <option value="Combo Monitor 15-21&quot;">Combo Monitor 15-21&quot;</option>
           <option value="IOS Video (Teradek Serv + Link)">IOS Video (Teradek Serv + Link)</option>
+          <option value="DoP Monitor 5&quot; handheld">DoP Monitor 5&quot; handheld</option>
+          <option value="DoP Monitor 7&quot; handheld">DoP Monitor 7&quot; handheld</option>
+          <option value="DoP Monitor 15-21&quot;">DoP Monitor 15-21&quot;</option>
         </select>
       </div>
       <h3 id="userButtonsHeading">User Buttons</h3>
