--- a/index.html
+++ b/index.html
@@ -1089,7 +1089,9 @@
       <div class="form-row">
         <label for="videoDistribution">Video distribution:</label>
         <select id="videoDistribution" name="videoDistribution" multiple size="10">
+          <option value="Directors Monitor 5&quot; handheld">Directors Monitor 5&quot; handheld</option>
           <option value="Directors Monitor 7&quot; handheld">Directors Monitor 7&quot; handheld</option>
+          <option value="Gaffers Monitor 5&quot; handheld">Gaffers Monitor 5&quot; handheld</option>
           <option value="Gaffers Monitor 7&quot; handheld">Gaffers Monitor 7&quot; handheld</option>
           <option value="Directors Monitor 15-21&quot;">Directors Monitor 15-21&quot;</option>
           <option value="Combo Monitor 15-21&quot;">Combo Monitor 15-21&quot;</option>
