feat: add selectable eye leather color for viewfinders

--- a/index.html
+++ b/index.html
@@ -1034,6 +1034,23 @@
           <option value="ARRI VEB-3 Viewfinder Extension Bracket">Yes</option>
         </select>
       </div>
+      <div class="form-row hidden" id="eyeLeatherColorRow">
+        <label for="viewfinderEyeLeatherColor">Bluestar eye leather color:</label>
+        <select id="viewfinderEyeLeatherColor" name="viewfinderEyeLeatherColor">
+          <option value="rot">Rot</option>
+          <option value="blau">Blau</option>
+          <option value="natur">Natur</option>
+          <option value="grün">Grün</option>
+          <option value="lila">Lila</option>
+          <option value="orange">Orange</option>
+          <option value="grau">Grau</option>
+          <option value="gelb">Gelb</option>
+          <option value="jaguar">Jaguar</option>
+          <option value="killer bee">Killer Bee</option>
+          <option value="green rabbit">Green Rabbit</option>
+          <option value="schwarz">Schwarz</option>
+        </select>
+      </div>
 
       <h3 id="matteboxFilterHeading">Mattebox and Filter</h3>
       <div class="form-row">
