Rename app to Cine List

--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="description" content="Plan your camera project and calculate power consumption &amp; battery life." />
-  <meta property="og:title" content="Camera Power Planner" />
+  <meta property="og:title" content="Cine List" />
   <meta property="og:description" content="Plan your camera project and calculate power consumption &amp; battery life." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="icon.png" />
   <meta name="theme-color" content="#f9f9f9" />
-  <meta name="application-name" content="Camera Power Planner" />
-  <meta name="apple-mobile-web-app-title" content="Camera Power Planner" />
+  <meta name="application-name" content="Cine List" />
+  <meta name="apple-mobile-web-app-title" content="Cine List" />
   <!-- Enables features that rely on eval(); revisit if security requirements change -->
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval' 'unsafe-inline';" />
-  <title>Camera Power Planner</title>
+  <title>Cine List</title>
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="overview-print.css" media="print" />
@@ -29,7 +29,7 @@
   <a href="#mainContent" class="skip-link" id="skipLink">Skip to content</a>
   <div id="offlineIndicator" role="status" aria-live="polite">Offline</div>
   <header id="topBar">
-    <h1 id="mainTitle">Camera Power Consumption App</h1>
+    <h1 id="mainTitle">Cine List</h1>
     <div class="controls">
       <select id="languageSelect" aria-label="Select language">
         <option value="en">English</option>
