--- a/index.html
+++ b/index.html
@@ -171,6 +171,10 @@
     <ul id="breakdownList">
       <!-- Device breakdown will be inserted here by script.js -->
     </ul>
+    <div id="powerDiagram" class="hidden">
+      <div id="powerDiagramBar" class="power-bar" role="img" aria-label="Power usage diagram"></div>
+      <p id="maxPowerText"></p>
+    </div>
     <p><strong><span id="totalPowerLabel">Total Consumption:</span></strong> <span id="totalPower">0.0</span> W</p>
     <p><strong><span id="totalCurrent144Label">Total Current (at 14.4V):</span></strong> <span id="totalCurrent144">0.00</span> A</p>
     <p><strong><span id="totalCurrent12Label">Total Current (at 12V):</span></strong> <span id="totalCurrent12">0.00</span> A</p>
