Load battery hotswap data

--- a/index.html
+++ b/index.html
@@ -1283,6 +1283,7 @@
   <script src="devices/video.js"></script>
   <script src="devices/fiz.js"></script>
   <script src="devices/batteries.js"></script>
+  <script src="devices/batteryHotswaps.js"></script>
   <script src="devices/cages.js"></script>
   <script src="devices/gearList.js"></script>
   <script src="devices/wirelessReceivers.js"></script>
