--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <meta name="apple-mobile-web-app-title" content="Cine List" />
   <!-- Enables features that rely on eval(); revisit if security requirements change -->
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval' 'unsafe-inline';" />
+  <meta name="color-scheme" content="light dark" />
   <title>Cine List</title>
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
