Default eye leather color to red

--- a/index.html
+++ b/index.html
@@ -1047,6 +1047,8 @@
         </select>
       </div>
 
+      <input type="hidden" id="viewfinderEyeLeatherColor" name="viewfinderEyeLeatherColor" value="Red" />
+
       <h3 id="matteboxFilterHeading">Mattebox and Filter</h3>
       <div class="form-row">
         <label for="mattebox">Mattebox:</label>
