feat: support cable subcategories in device editor

--- a/index.html
+++ b/index.html
@@ -250,6 +250,10 @@
         <option value="accessories.chargers">Charger</option>
       </select>
     </div>
+    <div class="form-row" id="subcategoryField" style="display:none;">
+      <label for="newSubcategory" id="subcategoryLabel">Subcategory:</label>
+      <select id="newSubcategory"></select>
+    </div>
     <div class="form-row">
       <label for="newName" id="deviceNameLabel">Name:</label>
       <input type="text" id="newName" placeholder="Device name" aria-labelledby="deviceNameLabel" />
