--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
         <option value="accessories.batteries">Accessory Battery</option>
         <option value="accessories.cables">Cable</option>
         <option value="accessories.cages">Camera Cage</option>
+        <option value="accessories.cameraSupport">Camera Support</option>
         <option value="accessories.chargers">Charger</option>
       </select>
     </div>
