--- a/index.html
+++ b/index.html
@@ -1142,11 +1142,11 @@
       <div class="form-row">
         <label for="videoDistribution">Video distribution:</label>
         <select id="videoDistribution" name="videoDistribution" multiple size="10">
-          <option value="Directors Monitor 5&quot; handheld">Directors Monitor 5&quot; handheld</option>
-          <option value="Directors Monitor 7&quot; handheld">Directors Monitor 7&quot; handheld</option>
-          <option value="Gaffers Monitor 5&quot; handheld">Gaffers Monitor 5&quot; handheld</option>
-          <option value="Gaffers Monitor 7&quot; handheld">Gaffers Monitor 7&quot; handheld</option>
-          <option value="Directors Monitor 15-21&quot;">Directors Monitor 15-21&quot;</option>
+          <option value="Director Monitor 5&quot; handheld">Director Monitor 5&quot; handheld</option>
+          <option value="Director Monitor 7&quot; handheld">Director Monitor 7&quot; handheld</option>
+          <option value="Gaffer Monitor 5&quot; handheld">Gaffer Monitor 5&quot; handheld</option>
+          <option value="Gaffer Monitor 7&quot; handheld">Gaffer Monitor 7&quot; handheld</option>
+          <option value="Director Monitor 15-21&quot;">Director Monitor 15-21&quot;</option>
           <option value="Combo Monitor 15-21&quot;">Combo Monitor 15-21&quot;</option>
           <option value="IOS Video (Teradek Serv + Link)">IOS Video (Teradek Serv + Link)</option>
           <option value="DoP Monitor 5&quot; handheld">DoP Monitor 5&quot; handheld</option>
