Show share link and copy status

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     <input type="file" id="importSetupsInput" accept=".json" class="hidden" />
     <button id="generateOverviewBtn">Generate Overview</button>
       <button id="shareSetupBtn">Share Project Link</button>
+    <p id="shareLinkMessage" class="hidden" role="status" aria-live="polite"></p>
     <div class="form-row hidden" id="sharedLinkRow">
       <label for="sharedLinkInput" id="sharedLinkLabel">Shared Link:</label>
       <input type="url" id="sharedLinkInput" placeholder="Paste shared link" aria-labelledby="sharedLinkLabel" />
